测试更改数据源为druid和加入fastJson的支持

--- a/src/main/resources/application-online.properties
+++ b/src/main/resources/application-online.properties
@@ -10,17 +10,17 @@ spring.datasource.min-idle=0
 ###mybatis config###
 mybatis.mapper-locations=classpath:/mybatis/*Mapper.xml
 mybatis.type-aliases-package=com.sample.model
-###spring mvc ¾²Ì¬ÎÄ¼şÖ¸¶¨####
+###spring mvc é™æ€æ–‡ä»¶æŒ‡å®š####
 spring.mvc.static-path-pattern=/**
 spring.resources.cache-period=864000
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.html
-#json´¦ÀíÊ¹ÓÃfastJson£¬Ä¬ÈÏÊ¹ÓÃjackson
+#jsonå¤„ç†ä½¿ç”¨fastJsonï¼Œé»˜è®¤ä½¿ç”¨jackson
 spring.http.converters.preferred-json-mapper=fastjson
 spring.jackson.date-format = yyyy-MM-dd HH:mm:ss
-#ÄÚÇ¶tomcatÅäÖÃ
+#å†…åµŒtomcaté…ç½®
 server.port=8089
-#server.context-path= //Èç¹ûÃ»ÓĞÖµ¾Í²»ÅäÖÃ£¬¿ÉÒÔÊ¹ÓÃÄ¬ÈÏ£¬µ«²»ÒªÔÚÕâÀïÁô¿Õ£¬»áÓĞ´íÎó
+#server.context-path= //å¦‚æœæ²¡æœ‰å€¼å°±ä¸é…ç½®ï¼Œå¯ä»¥ä½¿ç”¨é»˜è®¤ï¼Œä½†ä¸è¦åœ¨è¿™é‡Œç•™ç©ºï¼Œä¼šæœ‰é”™è¯¯
 server.tomcat.uri-encoding=UTF-8
 
 #http encoding
@@ -28,7 +28,7 @@ spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 
-#ÈÕÖ¾
+#æ—¥å¿—
 logging.file=/export/log
 #logging.pattern.console= [ %-5level] [%date{yyyy-MM-dd HH:mm:ss}] %logger{96} [%line] - %msg%n
 logging.level.root=INFO
