--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,16 @@
             <artifactId>commons-pool2</artifactId>
             <version>2.4.2</version>
         </dependency>
+
+        <!--druid-->
+        <!--<dependency>-->
+            <!--<groupId>com.alibaba</groupId>-->
+            <!--<artifactId>druid</artifactId>-->
+            <!--<version>1.0.18</version>-->
+        <!--</dependency>-->
+
     </dependencies>
+
 
     <!-- Package as an executable jar -->
     <build>
