--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -48,14 +48,14 @@ logging.level.root=INFO
 #logging.level.sample.mybatis.mapper=TRACE
 
 # REDIS (RedisProperties)
-#spring.redis.database=0
-#spring.redis.host=localhost
-#spring.redis.password=123456
-#spring.redis.pool.max-active=8
-#spring.redis.pool.max-idle=8
-#spring.redis.pool.max-wait=-1
-#spring.redis.pool.min-idle=0
-#spring.redis.port=6379
+spring.redis.database=0
+spring.redis.host=localhost
+spring.redis.password=123456
+spring.redis.pool.max-active=8
+spring.redis.pool.max-idle=8
+spring.redis.pool.max-wait=-1
+spring.redis.pool.min-idle=0
+spring.redis.port=6379
 #spring.redis.sentinel.master= # Name of Redis server.
 #spring.redis.sentinel.nodes= # Comma-separated list of host:port pairs.
 #spring.redis.timeout=10000
