修改编译输出位置

--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <outputDirectory>compairout</outputDirectory>
+                </configuration>
             </plugin>
 
             <plugin>
