--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -30,6 +30,7 @@ spring.mvc.view.suffix=.html
 #json处理使用fastJson，默认使用jackson
 spring.http.converters.preferred-json-mapper=fastjson
 spring.jackson.date-format = yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
 #内嵌tomcat配置
 server.port=8089
 #server.context-path= //如果没有值就不配置，可以使用默认，但不要在这里留空，会有错误
@@ -58,4 +59,4 @@ spring.redis.pool.min-idle=0
 spring.redis.port=6379
 #spring.redis.sentinel.master= # Name of Redis server.
 #spring.redis.sentinel.nodes= # Comma-separated list of host:port pairs.
-#spring.redis.timeout=10000
+spring.redis.timeout=10000
