--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.3.6.RELEASE</version>
+        <version>1.4.2.RELEASE</version>
     </parent>
     <properties>
         <jetty.version>9.2.17.v20160517</jetty.version>
@@ -59,6 +59,7 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
 
         <!--日志输出使用slf4j，与logback为日志实现类，只能同时出现一个-->
@@ -169,9 +170,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <outputDirectory>compairout</outputDirectory>
-                </configuration>
             </plugin>
 
             <plugin>
@@ -196,4 +194,17 @@
             </plugin>
         </plugins>
     </build>
+
+    <!--<distributionManagement>-->
+        <!--<repository>-->
+            <!--<id>guang</id>-->
+            <!--<name>guang</name>-->
+            <!--<url>http://dev.guang.com:9081/nexus/content/repositories/releases/</url>-->
+        <!--</repository>-->
+        <!--<snapshotRepository>-->
+            <!--<id>guang-snapshots</id>-->
+            <!--<name>guang-snapshots</name>-->
+            <!--<url>http://dev.guang.com:9081/nexus/content/repositories/snapshots</url>-->
+        <!--</snapshotRepository>-->
+    <!--</distributionManagement>-->
 </project>
