--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,27 +1,27 @@
 ###spring datasource###
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sms?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=zhenghuasheng
-spring.datasource.password=zhs2111014
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.max-active=10
-spring.datasource.max-wait=10000
-spring.datasource.max-idle=5
-spring.datasource.min-idle=0
+#spring.datasource.max-active=10
+#spring.datasource.max-wait=10000
+#spring.datasource.max-idle=5
+#spring.datasource.min-idle=0
 
-#####数据源为druid时配置要相应的更改
-#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-## 下面为连接池的补充设置，应用到上面所有数据源中
-## 初始化大小，最小，最大
-#spring.datasource.initialSize=5
-#spring.datasource.minIdle=5
-#spring.datasource.maxActive=20
-## 配置获取连接等待超时的时间
-#spring.datasource.maxWait=60000
+####数据源为druid时配置要相应的更改
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+# 下面为连接池的补充设置，应用到上面所有数据源中
+# 初始化大小，最小，最大
+spring.datasource.initialSize=5
+spring.datasource.minIdle=5
+spring.datasource.maxActive=20
+# 配置获取连接等待超时的时间
+spring.datasource.maxWait=60000
 
 
 ###mybatis config###
 mybatis.mapper-locations=classpath:/mybatis/*Mapper.xml
-mybatis.type-aliases-package=com.sample.model
+#mybatis.type-aliases-package=com.sample.model
 ###spring mvc 静态文件指定####
 spring.mvc.static-path-pattern=/**
 spring.resources.cache-period=864000
@@ -45,8 +45,9 @@ spring.http.encoding.force=true
 logging.file=/export/log
 #logging.pattern.console= [ %-5level] [%date{yyyy-MM-dd HH:mm:ss}] %logger{96} [%line] - %msg%n
 logging.level.root=INFO
-#logging.level.org.springframework.web=DEBUG
-#logging.level.sample.mybatis.mapper=TRACE
+logging.level.org.springframework.security=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.sample.mybatis.mapper=TRACE
 
 # REDIS (RedisProperties)
 spring.redis.database=0
