--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -32,7 +32,7 @@ spring.http.converters.preferred-json-mapper=fastjson
 spring.jackson.date-format = yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 #内嵌tomcat配置
-server.port=8089
+server.port=8087
 #server.context-path= //如果没有值就不配置，可以使用默认，但不要在这里留空，会有错误
 server.tomcat.uri-encoding=UTF-8
 
@@ -46,7 +46,7 @@ logging.file=/export/log
 #logging.pattern.console= [ %-5level] [%date{yyyy-MM-dd HH:mm:ss}] %logger{96} [%line] - %msg%n
 logging.level.root=INFO
 logging.level.org.springframework.security=INFO
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=INFO
 logging.level.sample.mybatis.mapper=TRACE
 
 # REDIS (RedisProperties)
