--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,3 +10,22 @@ log4j.appender.ServerDailyRollingFile.Append=true
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d [%F:%L] %-5p :: %m%n
+
+log4j.logger.com.order=DEBUG
+log4j.logger.com.opensymphony.oscache=ERROR
+log4j.logger.net.sf.navigator=ERROR
+log4j.logger.org.apache.commons=ERROR
+log4j.logger.org.springframework=INFO
+###显示SQL语句部分
+log4j.logger.com.ibatis=DEBUG
+log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
+log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
+log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
+log4j.logger.java.sql.Connection=DEBUG
+log4j.logger.java.sql.Statement=DEBUG
+log4j.logger.java.sql.PreparedStatement=DEBUG
+log4j.logger.java.sql.ResultSet=DEBUG
+
+log4j.logger.com.ibatis.db=WARN
+log4j.logger.org.hibernate=DEBUG
+log4j.logger.org.apache.velocity=FATAL
