--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -44,6 +44,7 @@ spring.http.encoding.force=true
 #日志
 logging.file=/export/log
 #logging.pattern.console= [ %-5level] [%date{yyyy-MM-dd HH:mm:ss}] %logger{96} [%line] - %msg%n
+#logging.pattern.console= %d %t %-5p [%c]-[%p] %c:%L :: %m%n
 logging.level.root=INFO
 logging.level.org.springframework.security=INFO
 logging.level.org.springframework.web=INFO
