--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -9,7 +9,7 @@ log4j.appender.ServerDailyRollingFile.Append=true
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d [%F:%L] %-5p :: %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d %t %-5p [%c]-[%p] %c:%L :: %m%n
 
 log4j.logger.com.order=DEBUG
 log4j.logger.com.opensymphony.oscache=ERROR
