--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -35,6 +35,7 @@ spring.jackson.time-zone=GMT+8
 server.port=8087
 #server.context-path= //如果没有值就不配置，可以使用默认，但不要在这里留空，会有错误
 server.tomcat.uri-encoding=UTF-8
+server.connectionTimeout=500000
 
 #http encoding
 spring.http.encoding.charset=UTF-8
