add pageHelper support

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,6 +18,12 @@ spring.datasource.maxActive=20
 # 配置获取连接等待超时的时间
 spring.datasource.maxWait=60000
 
+#pagehelper
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
+
 
 ###mybatis config###
 mybatis.mapper-locations=classpath:/mybatis/*Mapper.xml
