--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
             <version>5.1.39</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+
         <!-- dubbo dependency -->
         <dependency>
             <groupId>com.alibaba</groupId>
