--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,8 @@
+spring.application.name=springboot_1
 ###spring datasource###
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.max-active=10
 #spring.datasource.max-wait=10000
@@ -38,7 +39,7 @@ spring.http.converters.preferred-json-mapper=fastjson
 spring.jackson.date-format = yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 #内嵌tomcat配置
-server.port=8087
+server.port=8090
 #server.context-path= //如果没有值就不配置，可以使用默认，但不要在这里留空，会有错误
 server.tomcat.uri-encoding=UTF-8
 server.connectionTimeout=500000
@@ -69,3 +70,12 @@ spring.redis.port=6379
 #spring.redis.sentinel.master= # Name of Redis server.
 #spring.redis.sentinel.nodes= # Comma-separated list of host:port pairs.
 spring.redis.timeout=10000
+
+
+#RabbitMQ config
+spring.rabbitmq.host=117.48.199.197
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=zhenghuasheng
+spring.rabbitmq.password=zhs2111014
+spring.rabbitmq.virtualhost=/
+spring.rabbitmq.dynamic=true
