add https config

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -79,3 +79,10 @@ spring.rabbitmq.username=zhenghuasheng
 spring.rabbitmq.password=zhs2111014
 spring.rabbitmq.virtualhost=/
 spring.rabbitmq.dynamic=true
+
+# https#
+server.ssl.enabled=true
+server.ssl.key-store=classpath:slfe_keystore.p12
+server.ssl.key-store-password=123456
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=tomcat
