add https configs

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -81,8 +81,15 @@ spring.rabbitmq.virtualhost=/
 spring.rabbitmq.dynamic=true
 
 # https#
-server.ssl.enabled=true
+server.ssl.enabled=false
 server.ssl.key-store=classpath:slfe_keystore.p12
 server.ssl.key-store-password=123456
 server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
+
+
+#actuator#
+management.security.enabled=false
+management.port=8080
+management.context-path=/
+management.ssl.enabled=false
