--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -81,7 +81,7 @@ spring.rabbitmq.virtualhost=/
 spring.rabbitmq.dynamic=true
 
 # https#
-server.ssl.enabled=false
+server.ssl.enabled=true
 server.ssl.key-store=classpath:slfe_keystore.p12
 server.ssl.key-store-password=123456
 server.ssl.keyStoreType=PKCS12
@@ -93,3 +93,16 @@ management.security.enabled=false
 management.port=8080
 management.context-path=/
 management.ssl.enabled=false
+
+
+#mail#
+spring.mail.host=smtp.qq.com
+spring.mail.username=52126375
+spring.mail.password=vspsletsaykrbjad
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.default-encoding=UTF-8
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
