--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -60,7 +60,7 @@ logging.level.sample.mybatis.mapper=TRACE
 
 # REDIS (RedisProperties)
 spring.redis.database=0
-spring.redis.host=localhost
+spring.redis.host=10.16.2.131
 spring.redis.password=123456
 spring.redis.pool.max-active=8
 spring.redis.pool.max-idle=8
@@ -81,7 +81,7 @@ spring.rabbitmq.virtualhost=/
 spring.rabbitmq.dynamic=true
 
 # https#
-server.ssl.enabled=true
+server.ssl.enabled=false
 server.ssl.key-store=classpath:slfe_keystore.p12
 server.ssl.key-store-password=123456
 server.ssl.keyStoreType=PKCS12
