--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 spring.application.name=springboot_1
 ###spring datasource###
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xndw?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.max-active=10
 #spring.datasource.max-wait=10000
@@ -60,7 +60,7 @@ logging.level.sample.mybatis.mapper=TRACE
 
 # REDIS (RedisProperties)
 spring.redis.database=0
-spring.redis.host=10.16.2.131
+spring.redis.host=10.16.3.8
 spring.redis.password=123456
 spring.redis.pool.max-active=8
 spring.redis.pool.max-idle=8
@@ -73,10 +73,10 @@ spring.redis.timeout=10000
 
 
 #RabbitMQ config
-spring.rabbitmq.host=117.48.199.197
+spring.rabbitmq.host=10.16.3.8
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=zhenghuasheng
-spring.rabbitmq.password=zhs2111014
+spring.rabbitmq.username=zhs
+spring.rabbitmq.password=123456
 spring.rabbitmq.virtualhost=/
 spring.rabbitmq.dynamic=true
 
